@@ -11,6 +11,7 @@ Fixes:
    * Fix missing event selected in elm_index (elm_index_item_selected_set)
    * Fix update the min size hint on elm_label after a text set
    * Fix flip widget who show the two face at same time
+   * Fix the naviframe to delete contents which are preserved_on set if the naviframe is deleted.
 
 
 Changes since Elementary 1.7.0:
